// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=HOApprovalPassed 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <p
      class="lbh-body-m"
    >
      You must make an office appointment with the applicant to sign a new tenancy agreement
    </p>
    <p
      class="lbh-body-s"
    >
      Haylee Macejkovic
       contact details:
    </p>
    <p
      class="lbh-body-s"
    >
      Phone:
      <span
        style="margin-left: 1em;"
      >
        075949281
      </span>
    </p>
    <p
      class="lbh-body-s"
    >
      Email:
      <span
        style="margin-left: 1em;"
      >
        Gay.Jacobi@hotmail.com
      </span>
    </p>
    <p
      class="lbh-body-s"
    >
      If the contact details are not up to date, please
       
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="/processes/changeofname/e63e68c7-84b0-3a48-b450-896e2c3d7735"
      >
        update the contact details,
         
      </a>
      it will automatically update the tenant’s contact details as well.
    </p>
    <div
      class="govuk-checkboxes__item"
    >
      <input
        checked=""
        class="govuk-checkboxes__input"
        id="condition"
        type="checkbox"
      />
      <label
        class="govuk-label govuk-checkboxes__label"
        for="condition"
      >
        I have made an appointment to sign the CN7 form
      </label>
    </div>
    <form
      action="#"
      class="request-appointment-form"
      id="request-appointment-form"
      novalidate=""
    >
      <div
        class="govuk-form-group lbh-form-group"
        id="appointment-form-date-time-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="appointment-form-date-time-form-group-field"
        >
          
        </label>
        <div
          class="govuk-form-group lbh-form-group"
          id="appointment-form-date-time-field-form-group"
          style="display: flex; flex-wrap: wrap; align-items: flex-end; margin-top: 0px;"
        >
          <label
            class="govuk-label lbh-label"
            for="appointment-form-date-time-field-form-group-field"
          >
            
          </label>
          <fieldset
            class="govuk-form-group lbh-form-group mtfh-appointment-form__date"
            id="appointment-form-date"
            style="flex: 1 1 280px;"
          >
            <legend
              class="govuk-label lbh-label"
              for="appointment-form-date-field"
            >
              Date
              <sup
                aria-hidden="true"
              >
                *
              </sup>
            </legend>
            <div
              class="govuk-date-input lbh-date-input"
            >
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-day"
                />
                <input
                  aria-label="Day"
                  aria-valuemax="31"
                  aria-valuemin="1"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="day"
                  placeholder="dd"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-month"
                />
                <input
                  aria-label="Month"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="month"
                  placeholder="mm"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-year"
                />
                <input
                  aria-label="Year"
                  class="govuk-input lbh-input govuk-input govuk-date-input__input govuk-input--width-4"
                  name="year"
                  placeholder="yyyy"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="govuk-form-group lbh-form-group mtfh-appointment-form__time"
            id="appointment-form-time"
            style="flex: 1 1 280px;"
          >
            <legend
              class="govuk-label lbh-label"
              for="appointment-form-time-field"
            >
              Time
              <sup
                aria-hidden="true"
              >
                *
              </sup>
            </legend>
            <div
              class="govuk-date-input lbh-date-input"
            >
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-hour"
                />
                <input
                  aria-label="Hour"
                  aria-valuemax="12"
                  aria-valuemin="0"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="hour"
                  placeholder="00"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-minute"
                />
                <input
                  aria-label="Minute"
                  aria-valuemax="59"
                  aria-valuemin="0"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="minute"
                  placeholder="00"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-amPm"
                />
                <select
                  aria-label="AM/PM"
                  class="govuk-select lbh-select"
                  id="amPm"
                  name="amPm"
                >
                  <option
                    value=""
                  >
                    AM/PM
                  </option>
                  <option
                    value="am"
                  >
                    AM
                  </option>
                  <option
                    value="pm"
                  >
                    PM
                  </option>
                </select>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 245px;"
        type="submit"
      >
        Continue
      </button>
    </form>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=HOApprovalPassed and closeProcessReason provided 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  />
</div>
`;

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=TenureAppointmentScheduled 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment scheduled
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Monday 12th October 2099
            <br />
            Time: 
            08:59 am
          </p>
          <div
            style="display: flex; flex-direction: column; align-items: flex-start; margin-top: 15px;"
          >
            <button
              class="govuk-link lbh-link"
              type="button"
            >
              Change
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      class="govuk-button lbh-button"
      disabled=""
      type="button"
    >
      Documents signed
    </button>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=TenureAppointmentScheduled and closeProcessReason provided 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment missed
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Monday 12th October 2099
            <br />
            Time: 
            08:59 am
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders TenureInvestigation view correctly for state=NameUpdated 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h3
      class="lbh-heading-h3"
    >
      Thank you for your confirmation
    </h3>
    <ul
      class="lbh-list lbh-list--bullet"
      style="margin-left: 1em;"
    >
      <li>
        <p
          class="lbh-body-s"
        >
          This case is now closed and we have recorded this on the system - that you have sent an outcome letter to the resident. The outcome can be viewed in the activity history.
        </p>
      </li>
    </ul>
    <div
      style="margin-top: 1em;"
    >
      <a
        class="govuk-back-link lbh-back-link lbh-link--no-visited-state"
        href="/"
      >
        Return to home page
      </a>
    </div>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders TenureInvestigation view correctly for state=ProcessClosed 1`] = `
<div>
  <h2
    class="lbh-heading-h2"
  >
    <div>
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        target="_blank"
      >
        Haylee
         
        Macejkovic
      </a>
    </div>
  </h2>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment missed
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Tuesday 12th October 2010
            <br />
            Time: 
            08:59 am
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mtfh-box mtfh-box--warning"
  >
    <div
      class="mtfh-status-box"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#BE3A34"
          stroke-width="1.5"
        />
        <path
          d="M24.2969 26.6587H20.6035L19.8315 11.8701H25.0688L24.2969 26.6587ZM19.771 31.8354C19.771 30.9878 19.998 30.347 20.4521 29.9131C20.9062 29.4792 21.5672 29.2622 22.4351 29.2622C23.2726 29.2622 23.9185 29.4842 24.3726 29.9282C24.8368 30.3722 25.0688 31.008 25.0688 31.8354C25.0688 32.6326 24.8368 33.2633 24.3726 33.7275C23.9084 34.1816 23.2625 34.4087 22.4351 34.4087C21.5874 34.4087 20.9315 34.1867 20.4673 33.7427C20.0031 33.2886 19.771 32.6528 19.771 31.8354Z"
          fill="#BE3A34"
        />
      </svg>
      <div>
        <div
          class="mtfh-status-heading__title"
        >
          <h4
            class="lbh-heading-h4"
          >
            Change of name application closed 
          </h4>
        </div>
      </div>
    </div>
  </div>
  <h3
    class="lbh-heading-h3"
  >
    Thank you for your confirmation
  </h3>
  <ul
    class="lbh-list lbh-list--bullet"
    style="margin-left: 1em;"
  >
    <li>
      <p
        class="lbh-body-s"
      >
        This case is now closed and we have recorded this on the system - that you have sent an outcome letter to the resident. The outcome can be viewed in the activity history.
      </p>
    </li>
  </ul>
  <div
    style="margin-top: 1em;"
  >
    <a
      class="govuk-back-link lbh-back-link lbh-link--no-visited-state"
      href="/"
    >
      Return to home page
    </a>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders TenureInvestigation view correctly for state=TenureAppointmentRescheduled 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment missed
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Tuesday 12th October 2010
            <br />
            Time: 
            08:59 am
          </p>
        </div>
      </div>
    </div>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment scheduled
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Monday 12th October 2099
            <br />
            Time: 
            08:59 am
          </p>
          <div
            style="display: flex; flex-direction: column; align-items: flex-start; margin-top: 15px;"
          >
            <button
              class="govuk-link lbh-link"
              type="button"
            >
              Change
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      class="govuk-button lbh-button"
      disabled=""
      type="button"
    >
      Documents signed
    </button>
  </div>
</div>
`;
